--- a/services/index.html
+++ b/services/index.html
@@ -10,7 +10,7 @@
   <h1>Services (Beta)</h1>
   <h2>Website Services</h2>
 <ul class="w3-ul">
-  <li>We host you code.</li>
+  <li>We host, you code.</li>
   <li>100% Free</li>
 </ul>
   <h2><a href="https://forms.gle/DKKP18ntjKfXup9aA">Request a website today!</a></h2>
