--- a/list.html
+++ b/list.html
@@ -12,6 +12,9 @@
 <title>LC Games</title>
 <link rel="icon" href="./files/Favicon.png">
 
+<script src="particles.js"></script>
+<div id="particles-js"></div>
+
 <!--CSS-->
 <link rel="stylesheet" href="./css/style.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
