--- a/list.html
+++ b/list.html
@@ -12,7 +12,7 @@
 <title>LC Games</title>
 <link rel="icon" href="./files/Favicon.png">
 
-<script src="particles.js"></script>
+<script src="./part/particles.js"></script>
 <div id="particles-js"></div>
 
 <!--CSS-->
