--- a/list.html
+++ b/list.html
@@ -13,6 +13,11 @@
 <link rel="icon" href="./files/Favicon.png">
 
 <script src="./part/particles.js"></script>
+     <script>/* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
+particlesJS.load('particles-js', 'assets/particles.json', function() {
+  console.log('callback - particles.js config loaded');
+});
+</script>
 
 <!--CSS-->
 <link rel="stylesheet" href="./css/style.css">
