--- a/list.html
+++ b/list.html
@@ -15,6 +15,11 @@
 <!--CSS-->
 <link rel="stylesheet" href="./css/style.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+     body{
+          color: white;
+     }
+</style>
 
 <!--nav bar-->
 <div class="w3-bar w3-black w3-animate-left" class="w3-animate-opacity">
