--- a/news.html
+++ b/news.html
@@ -2,6 +2,12 @@
 <html>
 <head>
 <title>News</title>
+<link rel="stylesheet" href="./css/style.css">
+<style>
+     body{
+          color: white;
+     }
+</style>
 </head>
 <body>
 
