--- a/404.html
+++ b/404.html
@@ -1,3 +1,21 @@
 <title>404</title>
 <h1 style="text-align: center;">404</h1>
 <h2 style="text-align: center;">Page not found</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<title>404</title>
+<link rel="stylesheet" href="./css/style.css">
+<style>
+     body{
+          color: white;
+     }
+</style>
+</head>
+<body>
+
+<h1 style="text-align: center;">404</h1>
+<h2 style="text-align: center;">Page not found</h1>
+
+</body>
+</html>
