--- a/news.html
+++ b/news.html
@@ -12,9 +12,9 @@
 <body>
 
   <h1>LC NEWS</h1>
-  <h2>Currently the LC Team is working on new games to add for you guys. They will be added in the next few weeks. The current games we are working on are the Henry
-  Stickmin Games, and Super Mario 64 rom, and a few secret presents! Also the website is updated daily so don't worry. Also, STOP ASKING FOR GAMES WE CAN'T ADD!
-  </h2>
+  <h2>Hello LC Gamers! We at LC Games are taking a break over the holidays so there will be minimal updates. Back when school starts again we will start work! Happy
+       Holidays from, Scarif! P.S: Scarif is a collaborater in the LC Team. You most likely know him in real life. He's a tad bit annoying.</h2>
+  
 
 </body>
 </html>
