--- a/list.html
+++ b/list.html
@@ -31,8 +31,8 @@
 </head>
 <body>
      <h2>Welcome to <img src="./files/cooltext400062235659349.png"></h2>
-     <h1>Today is Jan, 5 2022</h1>
-     <h2>Game of the day: "Super Mario 64"</h2>
+     <h1>Today is Dec,26 2021</h1>
+     <h2>Game of the day: "Tanks"</h2>
      
     
      <p>This website is under the <a href="https://github.com/Herobrine5261/games2/blob/main/LICENSE">Apache-2.0 License</a>.</p>
