--- a/list.html
+++ b/list.html
@@ -33,8 +33,8 @@
      <h2>Welcome to <img src="./files/cooltext400062235659349.png"></h2>
      <h1>Today is Dec,26 2021</h1>
      <h2>Game of the day: "Tanks"</h2>
-     <h1>This website is brought to you by the LC Team.</h1>
-    
+     
+     <p>This website is brought to you by the LC Team.</p>
      <p>This website is under the <a href="https://github.com/Herobrine5261/games2/blob/main/LICENSE">Apache-2.0 License</a>.</p>
 </body>
 </html>
