--- a/news.html
+++ b/news.html
@@ -3,6 +3,7 @@
 <head>
 <title>News</title>
 <link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
      body{
           color: white;
