--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
 
   <h1>LC NEWS</h1>
   <h2>Hello LC Gamers! We at LC Games are taking a break over the holidays so there will be minimal updates. Back when school starts again we will start work! Happy
-       Holidays from, Scarif! P.S: Scarif is a collaborater in the LC Team. You most likely know him in real life. He's a tad bit annoying.</h2>
+       Holidays from, Scarif! P.S: Scarif is a collaborater in the LC Team.</h2>
   
 
 </body>
