--- a/news.html
+++ b/news.html
@@ -13,8 +13,7 @@
 <body>
 
   <h1>LC NEWS</h1>
-  <h2>Hello LC Gamers! We at LC Games are taking a break over the holidays so there will be minimal updates. Back when school starts again we will start work! Happy
-       Holidays from, Scarif! P.S: Scarif is a collaborater in the LC Team.</h2>
+  <h2>LC News Today! There is an official discord server for the website. The link will never change and is: https://discord.gg/bwk3Q9bXtU</h2>
   
 
 </body>
