--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 
   <h1>404 Error</h1>
   <h2>Page Not Found</h2>
-  <h3>Please return to the <a herf="./">Home Page.</a></h3>
+  <h3>Please return to the <a herf="https://lexia.vercel.app">Home Page.</a></h3>
 
 </body>
 </html>
