--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="icon" href="./files/Favicon.png">
 
 <!--CSS-->
-<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./css/bg.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
      body{
