--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -5,7 +5,7 @@
 	
 <!--CSS-->
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./css/bg.css">
 <style>
 .container {
 	padding: 20px;
