--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="google-site-verification" content="ipF7elduHQnVi1KAhsVlFsTNi-zMgoSzDwBkJPLHu64" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4952712508836803"
      crossorigin="anonymous"></script>
 <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e95f91ddcd1d4091b1b89ba44360cc39"}'></script><!-- End Cloudflare Web Analytics -->
