--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4762252322052844"
      crossorigin="anonymous"></script>
 
-<title>LC Games</title>
+<title>The Lexia Project</title>
 <link rel="icon" href="./files/Favicon.png">
 
 <!--CSS-->
@@ -32,7 +32,7 @@
 </div>
 </head>
 <body>
-     <h2>Welcome to <img src="./files/cooltext400062235659349.png"></h2>
+     <h2>Welcome to The Lexia Project</h2>
      <h1>Today is Dec, 28 2021</h1>
      <h2>Game of the day: "theimpossiblequiz"</h2>
      
