--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 </head>
 <body>
      <h2>Welcome to The Lexia Project</h2>
-     <h1>Today is Jan, 1 2022</h1>
+     <h2>Make sure to participate in this month's game vote!</h2>
+     <h1>Today is Jan, 5 2022</h1>
      <h2>Game of the day: "theimpossiblequiz"</h2>
      
      <p>This website is brought to you by the LC Team.</p>
