--- a/news.html
+++ b/news.html
@@ -13,7 +13,7 @@
 <body>
 
   <h1>LC NEWS</h1>
-  <h2>LC News Today! There is an official discord server for the website. The link will never change and is: https://discord.gg/bwk3Q9bXtU</h2>
+  <h2>LC News Today! There is an official discord server for the website. The link will never change and is: https://discord.gg/zbAyMuBfwe</h2>
   
 
 </body>
