--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
      <h1>Make sure to participate in this month's game vote!</h1>
      <h2>Game of the day: "theimpossiblequiz"</h2>
      <h2>We hope you had a happy holiday!</h2>
-     <p>This website is brought to you by the LC Team.</p>
+     <p>Make sure to check out the important news today!</p>
      <p>This website is under the <a href="https://github.com/Herobrine5261/games2/blob/main/LICENSE">Apache-2.0 License</a>.</p>
 </body>
 </html>
