--- a/news.html
+++ b/news.html
@@ -13,7 +13,8 @@
 <body>
 
   <h1>LC NEWS</h1>
-  <h2>LC News Today! There is an official discord server for the website. The link will never change and is: https://discord.gg/zbAyMuBfwe</h2>
+  <h2>Us at LC Games are back to work and will start development on new projects. Make sure to join the game vote to get the next game.
+     The Losers of the game vote will be added at the end of the month so don't worry.</h2>
   
 
 </body>
