--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
      <h2>Game of the day: "theimpossiblequiz"</h2>
      <h2>We hope you had a happy holiday!</h2>
      <p>Make sure to check out the important news today!</p>
+     <p> The official discord is: https://discord.gg/zbAyMuBfwe </p>
      <p>This website is under the <a href="https://github.com/Herobrine5261/games2/blob/main/LICENSE">Apache-2.0 License</a>.</p>
+     
 </body>
 </html>
