--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
      <h2>Welcome to The Lexia Project</h2>
      <h2>Today is January, 5 2022</h2>
-     <h1>Make sure to participate in this month's game vote!</h1>
+     <h1>On the game vote thare where a lot of duplicet game votes. So we desided to delet all of the duplicets. Please check on the game vote form to see if you vote was deleted.</h1>
      <h2>Game of the day: "theimpossiblequiz"</h2>
      <h2>We hope you had a happy holiday!</h2>
      <p>Make sure to check out the important news today!</p>
