--- a/index.html
+++ b/index.html
@@ -29,17 +29,13 @@
   <a href="https://github.com/Herobrine5261/games2/issues" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Report an issue</a>
   <a href="./news.html" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">News</a>
   <a href="./Credits.html" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Credits</a>
-  <a href="https://forms.gle/F9aFXcbBM3FMGoZb7" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Join the Game Vote!</a>
 </div>
 </head>
 <body>
      <h2>Welcome to The Lexia Project</h2>
      <h2>Today is January, 5 2022</h2>
-     <h1>On the game vote there where a lot of dupe game votes. So we decided to delete all of the dupes. Please check on the game vote form to see if your vote was deleted.</h1>
-     <h2>Game of the day: "theimpossiblequiz"</h2>
-     <h2>We hope you had a happy holiday!</h2>
+     <h2>Game of the day: "SuperSmashBros"</h2>
      <p>Make sure to check out the important news today!</p>
-     <p> The official discord is: https://discord.gg/zbAyMuBfwe </p>
      <p>This website is under the <a href="https://github.com/Herobrine5261/games2/blob/main/LICENSE">Apache-2.0 License</a>.</p>
      
 </body>
