--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -95,9 +95,9 @@
 <div class="box">
 <input type="text" id="gsearchbar" onkeyup="var a=document.querySelectorAll('#glist a[href]');for(var i=0;i<a.length;i++)a[i].style.display=a[i].textContent.toUpperCase().indexOf(this.value.toUpperCase())!=-1?'block':'none'" autocomplete="off" spellcheck="false" placeholder="Search" />
 <div id="glist">
-<h2>New Games</h2>
+<h2>Winner of the Game Vote!</h2>
+<a href="https://www.dropbox.com/s/k6hadsohonjhabw/SuperSmashBros.html?dl=1">SuperSmashBros</a>
 <h2>HTML5 Games</h2>
-<a href=https://www.dropbox.com/sh/je4yh2vquv4fju0/AAD4WwyAVqP0rd9ssLIpkxtGa?dl=0>Extra Games</a>
 <a href="./gfiles/html5/2048/">2048</a>
 <a href="./gfiles/html5/asteroids/">Asteroids</a>
 <a href="./gfiles/html5/astray/">Astray</a>
