--- a/news.html
+++ b/news.html
@@ -13,8 +13,7 @@
 <body>
 
   <h1>LC NEWS</h1>
-  <h2>Us at LC Games are back to work and will start development on new projects. Make sure to join the game vote to get the next game.
-     The Losers of the game vote will be added at the end of the month so don't worry.</h2>
+  <h2>Super Smash Bros. has won the game vote. You can check it out in the games tab. The games that lost will be added later in the month.</h2>
   
 
 </body>
