--- a/news.html
+++ b/news.html
@@ -13,7 +13,7 @@
 <body>
 
   <h1>LC NEWS</h1>
-  <h2>Super Smash Bros. has won the game vote. You can check it out in the games tab. The games that lost will be added later in the month.</h2>
+  <h2>Super Smash Bros has won the game vote. You can check it out in the games tab, the games that lost will be added later in the month.</h2>
   
 
 </body>
