--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
      <h2>Game of the day: "SuperSmashBros"</h2>
      <p>Make sure to check out the important news today!</p>
      <p>This website is under the <a href="https://github.com/Herobrine5261/games2/blob/main/LICENSE">Apache-2.0 License</a>.</p>
-     
+     <audio autoplay><source src="videoplayback.mp3" type="audio/mpeg"></audio>
 </body>
 </html>
