--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -79,7 +79,7 @@
 }
 </style> 
   
-<title>LC Games</title>
+<title>The Lexia Project</title>
 	
 <!--nav bar-->
 <div class="w3-bar w3-black w3-center w3-animate-left">
