--- a/index.html
+++ b/index.html
@@ -41,4 +41,7 @@
      <p>This website is under the <a href="https://github.com/Golden-Frog/Lexia/blob/main/LICENSE">Apache-2.0 License</a>.</p>
      <audio autoplay><source src="videoplayback.mp3" type="audio/mpeg"></audio>
 </body>
+<footer>
+     <h1>This is a test. Cool.</h1>
+</footer>
 </html>
