--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
      <audio autoplay><source src="videoplayback.mp3" type="audio/mpeg"></audio>
 </body>
 <footer>
-     <h1>This is a test. Cool.</h1>
+<div class="w3-container w3-teal">
+  <h5>Footer</h5>
+  <p>Footer information goes here</p>
+</div>
 </footer>
 </html>
