--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
      <h2>Welcome to The Lexia Project</h2>
      <h2>Today is January, 10 2022</h2>
      <h2>Game of the day: "SuperSmashBros"</h2>
-     <h2><a href="https://forms.gle/GmifH8h79vSJumXT8">Community Game Toll for new games!</a></h2>
+     <h2><a href="https://forms.gle/GmifH8h79vSJumXT8">Community Game Toll for new games!(Click to access)</a></h2>
      <p>Make sure to check out the important news today!</p>
      <p>This website is under the <a href="https://github.com/Golden-Frog/Lexia/blob/main/LICENSE">Apache-2.0 License</a>.</p>
      <audio autoplay><source src="videoplayback.mp3" type="audio/mpeg"></audio>
