--- a/news.html
+++ b/news.html
@@ -22,7 +22,7 @@
 <body>
 
   <h1>LC NEWS</h1>
-  <h2>Super Smash Bros has won the game vote. You can check it out in the games tab, the games that lost will be added later in the month.</h2>
+  <h2>There is now a community game poll on the home page. Click the Game Toll to put in the games you would like added!</h2>
   
 
 </body>
