--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
      <h2>Welcome to The Lexia Project</h2>
      <h2>Today is January, 11 2022</h2>
-     <h2>Game of the day: "SuperSmashBros"</h2>
+     <h2>Game of the day: "Pacman"</h2>
      <h2>This website is updated daily.</h2>
      <h2><a href="https://forms.gle/GmifH8h79vSJumXT8">Community Game Toll for new games!(Click to access)</a></h2>
      <h2>Make sure to check out the news today it is very important!</h2>
