--- a/index.html
+++ b/index.html
@@ -36,16 +36,13 @@
      <h2>Welcome to The Lexia Project</h2>
      <h2>Today is January, 11 2022</h2>
      <h2>Game of the day: "Pacman"</h2>
-     <h2>This website is updated daily.</h2>
-     <h2><a href="https://forms.gle/GmifH8h79vSJumXT8">Community Game Toll for new games!(Click to access)</a></h2>
      <h2>Make sure to check out the news today it is very important!</h2>
-     <p>This website is under the <a href="https://github.com/Golden-Frog/Lexia/blob/main/LICENSE">Apache-2.0 License</a>.</p>
      <audio autoplay><source src="videoplayback.mp3" type="audio/mpeg"></audio>
 </body>
 <footer>
 <div class="w3-container w3-teal">
-  <h5>Footer</h5>
-  <p>Footer information goes here</p>
+  <a href="https://forms.gle/GmifH8h79vSJumXT8">Suggest New games</a>
+  <p>This website is under the <a href="https://github.com/Golden-Frog/Lexia/blob/main/LICENSE">Apache-2.0 License</a>.</p>
 </div>
 </footer>
 </html>
