--- a/news.html
+++ b/news.html
@@ -21,8 +21,10 @@
 </head>
 <body>
 
-  <h1>LC NEWS</h1>
-  <h2>There is now a community game poll on the home page. Click the Game Toll to put in the games you would like added!</h2>
+  <h1>LC News</h1>
+     
+     <h2>No News today.</h2>
+  
   
 
 </body>
