--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -340,4 +340,10 @@
 </div>
 <audio autoplay><source src="videoplayback.mp3" type="audio/mpeg"></audio>
 </body>
+<footer>
+<div class="w3-container w3-teal">
+  <a href="https://forms.gle/GmifH8h79vSJumXT8">Suggest New games</a>
+  <p>This website is under the <a href="https://github.com/Golden-Frog/Lexia/blob/main/LICENSE">Apache-2.0 License</a>.</p>
+</div>
+</footer>
 </html>
