--- a/news.html
+++ b/news.html
@@ -28,4 +28,10 @@
   
 
 </body>
+<footer>
+<div class="w3-container w3-teal">
+  <a href="https://forms.gle/GmifH8h79vSJumXT8">Suggest New games</a>
+  <p>This website is under the <a href="https://github.com/Golden-Frog/Lexia/blob/main/LICENSE">Apache-2.0 License</a>.</p>
+</div>
+</footer>
 </html>
