--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
      <h2>Welcome to The Lexia Project</h2>
      <h2>Today is January, 11 2022</h2>
      <h2>Game of the day: "Pacman"</h2>
-     <h2>Make sure to check out the news today it is very important!</h2>
+     <h2>In ver 4.0 we will add movies. <a href="https://forms.gle/pKYNRkGXA2pRX4jx7">Summit your movie request here!</a></h2>
      <audio autoplay><source src="videoplayback.mp3" type="audio/mpeg"></audio>
 </body>
 <footer>
