--- a/index.html
+++ b/index.html
@@ -16,12 +16,8 @@
 <!--CSS-->
 <link rel="stylesheet" href="./css/bg.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
-     body{
-          color: white;
-          text-align: center;
-     }
-</style>
+<link rel="stylesheet" href="./css/center.css">
+
 
 <!--nav bar-->
 <div class="w3-bar w3-black w3-animate-left" class="w3-animate-opacity">
