--- a/news.html
+++ b/news.html
@@ -23,7 +23,7 @@
 
   <h1>LC News</h1>
      
-     <h2>No News today.</h2>
+     <h2>LC is happy to announce The Lexia Project 4.0. 4.0 will introduce movies and music to TLP. Also a new tab will be added called links. It will just have links for all of LC's projects.</h2>
   
   
 
