--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -5,7 +5,8 @@
 	
 <!--CSS-->
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="./css/bg.css">
+<link rel="stylesheet" href="/css/bg.css">
+<link rel="stylesheet" href="/css/center.css">
 <style>
 .container {
 	padding: 20px;
@@ -338,7 +339,7 @@
 </div>
 </div>
 </div>
-<audio autoplay><source src="videoplayback.mp3" type="audio/mpeg"></audio>
+<audio autoplay><source src="/videoplayback.mp3" type="audio/mpeg"></audio>
 </body>
 <footer>
 <div class="w3-container w3-teal">
