--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div class="w3-container w3-teal">
   <a href="https://forms.gle/GmifH8h79vSJumXT8">Suggest New games</a>
 
-     <a href="https://padlet.com/whitsonjenkins/lexia_change_log?utm_campaign=added_comment&utm_medium=desktop&utm_source=notifications">Lexia Update Log</a>
+     <a href="https://padlet.com/Golden_Frog/lexia_change_log">Lexia Update Log</a>
  
      <p>This website is under the <a href="https://github.com/Golden-Frog/Lexia/blob/main/LICENSE">Apache-2.0 License</a>.</p>
 </div>
