--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 </head>
 <body>
      <h2>Welcome to The Lexia Project</h2>
-     <h2>Today is January, 12 2022</h2>
+     <h2>Today is January, 13 2022</h2>
      <h2>Game of the day: "theimpossiblequiz2"</h2>
+     <h2>The official Minecraft Server is jenkins.game-server.ccL25511   (only on java!)
      <h2>In version 4.0 we will add movies. <a href="https://forms.gle/pKYNRkGXA2pRX4jx7">Submit your movie request here!</a></h2>
      <audio autoplay><source src="videoplayback.mp3" type="audio/mpeg"></audio>
 </body>
@@ -41,7 +42,7 @@
 
      <a href="https://padlet.com/Golden_Frog/lexia_change_log">Lexia Update Log</a>
      <a href="https://www.tomorrowtides.com/free-money29.html">Free money from LC</a>
- 
+     
      <p>This website is under the <a href="https://github.com/Golden-Frog/Lexia/blob/main/LICENSE">Apache-2.0 License</a>.</p>
 </div>
 </footer>
