--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
      <h2>Welcome to The Lexia Project</h2>
      <h2>Today is January, 13 2022</h2>
-     <h2>Game of the day: "theimpossiblequiz2"</h2>
+     <h2>Game of the day: "doodledefender"</h2>
      <h2>The official Minecraft Server is, jenkins.game-server.cc:25511   (only on java!)
      <h2>In version 4.0 we will add movies. <a href="https://forms.gle/pKYNRkGXA2pRX4jx7">Submit your movie request here!</a></h2>
      <audio autoplay><source src="videoplayback.mp3" type="audio/mpeg"></audio>
