--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <a href="https://forms.gle/GmifH8h79vSJumXT8">Suggest New games</a>
 
      <a href="https://padlet.com/Golden_Frog/lexia_change_log">Lexia Update Log</a>
-     <a href="https://www.tomorrowtides.com/free-money29.html">Click here to become 4.0 beta tester!</a>
+     <a href="https://www.thisworldthesedays.com/sign-up-for-lexiavercelapp-40.html">Click here to become 4.0 beta tester!</a>
      
      <p>This website is under the <a href="https://github.com/Golden-Frog/Lexia/blob/main/LICENSE">Apache-2.0 License</a>.</p>
 </div>
