--- a/news.html
+++ b/news.html
@@ -2,13 +2,9 @@
 <html>
 <head>
 <title>News</title>
+<link rel="stylesheet" href="./css/center.css">
 <link rel="stylesheet" href="./css/bg.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
-     body{
-          color: white;
-     }
-</style>
 
 <!--nav bar-->
 <div class="w3-bar w3-black w3-animate-left" class="w3-animate-opacity">
