--- a/news.html
+++ b/news.html
@@ -19,8 +19,9 @@
 
   <h1>LC News</h1>
      
-     <h2>1,11,22:LC is happy to announce The Lexia Project 4.0. 4.0 will introduce movies and music to TLP. Also a new tab will be added called links. It will just have links for all of LC's projects.</h2>
-  
+     <h2>1,13,22:From Scarif: 4.0 is on the way for LC Games! It will be the largest update since 1.0! The update will add many things but will add many new features.
+       Also, it will take a while so us from the LC Team apologise for the wait. But it will release when we feel it fits and doesn't have any bugs. That's all for today
+       folks'.</h2>
   
 
 </body>
