--- a/news.html
+++ b/news.html
@@ -19,9 +19,9 @@
 
   <h1>LC News</h1>
      
-     <h2>1,13,22:From Scarif: 4.0 is on the way for LC Games! It will be the largest update since 1.0! The update will add many things but will add many new features.
-       Also, it will take a while so us from the LC Team apologise for the wait. But it will release when we feel it fits and doesn't have any bugs. That's all for today
-       folks'.</h2>
+     <h2>1,19,22: 4.0 will be heavily delayed due to the head dev being quarratined. Also some features we announced may be removed. 
+          There might be a chance they will still be added but there is a chance we might have to cancel some features.
+          Apologies, Scarif.</h2>
   
 
 </body>
