--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
      <!--ADS-->
      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4762252322052844"
      crossorigin="anonymous"></script>
+     
+     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 <title>The Lexia Project</title>
 <link rel="icon" href="./files/Favicon.png">
@@ -29,6 +31,7 @@
 </div>
 </head>
 <body>
+     <div id="google_translate_element"></div>
      <h2>Welcome to The Lexia Project</h2>
      <h2>Today is January, 19 2022</h2>
      <h2>Very unfortunate news in the news tab..</h2>
