--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
      crossorigin="anonymous"></script>
      
      <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+     <script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
 
 <title>The Lexia Project</title>
 <link rel="icon" href="./files/Favicon.png">
