--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4762252322052844"
      crossorigin="anonymous"></script>
      
+     <!--Google Translate-->
      <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
      <script type="text/javascript">
 function googleTranslateElementInit() {
@@ -17,8 +18,9 @@ function googleTranslateElementInit() {
 }
 </script>
 
+<!--Website Info-->
 <title>The Lexia Project</title>
-<link rel="icon" href="./files/Favicon.png">
+<link rel="icon" href="/files/Favicon.png">
 
 <!--CSS-->
 <link rel="stylesheet" href="./css/bg.css">
@@ -28,7 +30,7 @@ function googleTranslateElementInit() {
 
 <!--nav bar-->
 <div class="w3-bar w3-black w3-animate-left" class="w3-animate-opacity">
-  <a href="https://lexia.vercel.app/list.html" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Home</a>
+  <a href="/" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Home</a>
      <a href="./gfiles" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Games</a>
   <a href="https://github.com/Herobrine5261/games2/issues" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Report an issue</a>
   <a href="./news.html" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">News</a>
