--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4762252322052844"
      crossorigin="anonymous"></script>
      
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     
      <!--Google Translate-->
      <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
      <script type="text/javascript">
