--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ function googleTranslateElementInit() {
 <body>
      <div id="google_translate_element"></div>
      <h2>Welcome to The Lexia Project</h2>
-     <h2>Today is January, 19 2022</h2>
+     <h2>Today is January, 20 2022</h2>
      <h2>Before 4.0 happens there will be 3.9! Check the news for details.</h2>
-     <h2>Game of the day: "unreal flash"</h2>
+     <h2>Game of the day: "stickwar"</h2>
      <h2>In version 4.0 we might add movies. <a href="https://forms.gle/pKYNRkGXA2pRX4jx7">Submit your movie request here!</a></h2>
     
 </body>
