--- a/news.html
+++ b/news.html
@@ -19,9 +19,7 @@
 
   <h1>LC News</h1>
      
-     <h2>1,19,22: 4.0 will be heavily delayed due to the head dev being quarratined. Also some features we announced may be removed. 
-          There might be a chance they will still be added but there is a chance we might have to cancel some features.
-          Apologies, Scarif.</h2>
+     <h2>1,20,22: 3.9 is on the way extremely soon. It's just a regular patch update. It's just going to patch some glitches and release some new games.</h2>
   
 
 </body>
