--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@ function googleTranslateElementInit() {
 </head>
 <body>
      <h2>Welcome to The Lexia Project</h2>
-     <h2>Today is January, 20 2022</h2>
-     <h2>Before 4.0 happens there will be 3.9! Check the news for details.</h2>
-     <h2>Game of the day: "stickwar"</h2>
+     <h2>This will be the last update of Lexia. Thank You for you support.</h2>
+     <h2>It will be discontinued and maybe someday it will be updated again?</h2>
+     <h2>September 2021-January 2022</h2>
     
 </body>
 <footer>
