--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@ function googleTranslateElementInit() {
 </head>
 <body>
      <h2>Welcome to The Lexia Project</h2>
-     <h2>This will be the last update of Lexia. Thank You for you support.</h2>
-     <h2>It will be discontinued and maybe someday it will be updated again?</h2>
+     <h2>The Lexia Project is now discontinued. Thank You for you support.</h2>
      <h2>September 2021-January 2022</h2>
     
 </body>
