--- a/news.html
+++ b/news.html
@@ -17,7 +17,8 @@
 
   <h1>LC News</h1>
      
-     <h2>1,20,22: 3.9 is on the way extremely soon. It's just a regular patch update. It's just going to patch some glitches and release some new games.</h2>
+     <h2>The Lexia Project is officialy discontinued. Us at LC think that is done. We've added all the games that needed to be added. 
+         Thank you for you support and love everyone who has helped make this project happen! Final news change- Scarif.</h2>
   
 
 </body>
