--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ function googleTranslateElementInit() {
      <h2>Welcome to The Lexia Project</h2>
      <h2>The Lexia Project is now discontinued. Thank You for you support.</h2>
      <h2>September 2021-January 2022</h2>
-     <h2>From Michael Swinnerton, and Golden Frog.
+     <h2>From Michael Swinnerton, and Golden Frog.</h2>
     
 </body>
 <footer>
