--- a/news.html
+++ b/news.html
@@ -18,7 +18,7 @@
   <h1>LC News</h1>
      
      <h2>The Lexia Project is officialy discontinued. Us at LC think that is done. We've added all the games that needed to be added. 
-         Thank you for you support and love everyone who has helped make this project happen! Final news change- Scarif.</h2>
+         Thank you for you support and love everyone who has helped make this project happen! Thanks.</h2>
   
 
 </body>
