--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ function googleTranslateElementInit() {
 <footer>
 <div class="w3-container w3-teal">
      <div id="google_translate_element"></div>
-     <a href="https://forms.gle/GmifH8h79vSJumXT8">Suggest New games</a>
+     <a href="https://padlet.com/Scarif/5yv6d5hr3uu9rbnd">What is next for LC Games?</a>
     
      
 </div>
