--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ function googleTranslateElementInit() {
      <h2>The Lexia Project is now discontinued. The website will stay up ,but there will be no updates. Thank You for you support.</h2>
      <h2>September 2021-January 2022</h2>
      <h2>There might be a new website sooner or later but currently that is not in the works. We would announce it on here just so you know.</h2>
-    
+     <h2>We have released a new game on Roblox: https://web.roblox.com/games/8649538285/Do-Whatever-You-Want-Simulator-DWYWS#!/store
 </body>
 <footer>
 <div class="w3-container w3-teal">
