--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ function googleTranslateElementInit() {
 </script>
 
 <!--Website Info-->
-<title>The Lexia Project(Discontinued)</title>
+<title>The Lexia Project</title>
 <link rel="icon" href="/files/Favicon.png">
 
 <!--CSS-->
