--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@ function googleTranslateElementInit() {
 </head>
 <body>
      <h2>Welcome to The Lexia Project</h2>
-     <h2>The Lexia Project is now discontinued. The website will stay up ,but there will be no updates. Thank You for you support.</h2>
-     <h2>September 2021-January 2022</h2>
-     <h2>There might be a new website sooner or later but currently that is not in the works. We would announce it on here just so you know.</h2>
+     <h2>Play whatever you need!</h2
      
 </body>
 <footer>
