--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@ function googleTranslateElementInit() {
 </head>
 <body>
      <h2>Welcome to The Lexia Project</h2>
-     <h2>Play whatever you need!</h2
+     <h2>The Lexia Project will add more games But, The date, Game of the Day, Community Votes, and Game Requests will NOT be a thing.</h2>
+     <h2>Play whatever you need!</h2>
      
 </body>
 <footer>
