--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@ function googleTranslateElementInit() {
 </head>
 <body>
      <h2>Welcome to The Lexia Project</h2>
-     <h2>The Lexia Project will add more games But, The date, Game of the Day, Community Votes, and Game Requests will NOT be a thing.</h2>
+     <h2>We add games!</h2>
      <h2>Play whatever you need!</h2>
-     
+     <a href="https://docs.google.com/forms/d/12diYy0D5FcrzcpG6XFBwNerbxvzD3FSqih0shzjjysA/edit">Suggest a game!</a>
 </body>
 <footer>
 <div class="w3-container w3-teal">
