--- a/news.html
+++ b/news.html
@@ -8,7 +8,7 @@
 
 <!--nav bar-->
 <div class="w3-bar w3-black w3-animate-left" class="w3-animate-opacity">
-  <a href="https://lexia.vercel.app/list.html" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Home</a>
+  <a href="/" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Home</a>
   <a href="./gfiles" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Games</a>
   <a href="./news.html" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">News</a>
 </div>
