--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ function googleTranslateElementInit() {
 <div class="w3-container w3-teal">
      <div id="google_translate_element"></div>
      <a href="https://padlet.com/Scarif/5yv6d5hr3uu9rbnd">What is next for LC Games?</a>
-     <a href="https://docs.google.com/forms/d/12diYy0D5FcrzcpG6XFBwNerbxvzD3FSqih0shzjjysA/edit">Suggest a game!</a>
+     <a href="https://docs.google.com/forms/d/12diYy0D5FcrzcpG6XFBwNerbxvzD3FSqih0shzjjysA/edit">Suggest a game idea!</a>
     
      
 </div>
