--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ function googleTranslateElementInit() {
 </head>
 <body>
      <h2>Welcome to The Lexia Project</h2>
-     <h2>We add games!</h2>
+     <h2>Make sure to suggest a game!</h2>
      <h2>Play whatever you need!</h2>
 </body>
 <footer>
