--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -342,7 +342,7 @@
 <footer>
 <div class="w3-container w3-teal">
   <a href="https://forms.gle/GmifH8h79vSJumXT8">Suggest New games</a>
-  <p>This website is under the <a href="https://github.com/Golden-Frog/Lexia/blob/main/LICENSE">Apache-2.0 License</a>.</p>
+  <p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.<p>
 </div>
 </footer>
 </html>
