--- a/news.html
+++ b/news.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <title>News</title>
-<link rel="stylesheet" href="./css/center.css">
-<link rel="stylesheet" href="./css/bg.css">
+<link rel="stylesheet" href="/css/center.css">
+<link rel="stylesheet" href="/css/bg.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <!--nav bar-->
 <div class="w3-bar w3-black w3-animate-left" class="w3-animate-opacity">
   <a href="/" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Home</a>
-  <a href="./gfiles" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Games</a>
-  <a href="./news.html" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">News</a>
+  <a href="/gfiles" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Games</a>
+  <a href="/news.html" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">News</a>
 </div>
 </head>
 <body>
@@ -23,8 +23,7 @@
 </body>
 <footer>
 <div class="w3-container w3-teal">
-  <a href="https://forms.gle/GmifH8h79vSJumXT8">Suggest New games</a>
-  <p>This website is under the <a href="https://github.com/Golden-Frog/Lexia/blob/main/LICENSE">Apache-2.0 License</a>.</p>
+<p><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</p>
 </div>
 </footer>
 </html>
