--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 </head>
 <body>
-     <h2>Welcome to The Lexia Project</h2>
+     <h2>Welcome to LC Games X Moutain Gap Hangout</h2>
      <h2>Make sure to suggest a game!</h2>
      <h2>Play whatever you need!</h2>
 </body>
