--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!--Website Info-->
-<title>The Lexia Project</title>
+<title>LC Games X MGH</title>
 <link rel="icon" href="/files/Favicon.png">
 
 <!--CSS-->
@@ -30,7 +30,7 @@
 </div>
 </head>
 <body>
-     <h2>Welcome to LC Games X Moutain Gap Hangout</h2>
+     <h2>Welcome to LC Games X Mountain Gap Hangout</h2>
      <h2>Make sure to suggest a game!</h2>
      <h2>Play whatever you need!</h2>
 </body>
