--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 </div>
 </head>
 <body>
-     <h2LC Games X Mountain Gap Hangout</h2>
-     <h2>Make sure to suggest a game!</h2>
+     <h2>Welcome the the Lexia Project!</h2>
+     <h3>With Help From MGH.</h3>
      <h2>Play whatever you need!</h2>
 </body>
 <footer>
