--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
      <h2>Welcome the the Lexia Project!</h2>
      <h3>With Help From MGH.</h3>
-     <h2>Play whatever you need!</h2>
+     <h2>Play whatever you want!</h2>
 </body>
 <footer>
 <div class="w3-container w3-teal">
