--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <a href="/" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Home</a>
   <a href="/gfiles" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Games</a>
   <a href="/news.html" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">News</a>
+  <a href="https://sites.google.com/stu.hsv-k12.org/leastcommonhangout/weather" class="w3-bar-item w3-button">Weather</a>
 </div>
 </head>
 <body>
