--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 </head>
 <body>
-     <h2>Welcome the the Lexia Project!</h2>
+     <h2>Welcome to Galaxy Games!</h2>
      <h2>Play whatever you want!</h2>
    
      
