--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!--Website Info-->
-<title>LC Games X MGH</title>
+<title>Galaxy Games - Home</title>
 <link rel="icon" href="/files/Favicon.png">
 
 <!--CSS-->
