--- a/news.html
+++ b/news.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>News</title>
+<title>Galaxy Games - News</title>
 <link rel="stylesheet" href="/css/center.css">
 <link rel="stylesheet" href="/css/bg.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
