--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -80,7 +80,7 @@
 }
 </style> 
   
-<title>The Lexia Project</title>
+<title>Galaxy Games - Games List</title>
 	
 <!--nav bar-->
 <div class="w3-bar w3-black w3-center w3-animate-left">
