--- a/index.html
+++ b/index.html
@@ -21,14 +21,20 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="./css/center.css">
 
-
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+     
 <!--nav bar-->
-<div class="w3-bar w3-black w3-animate-left" class="w3-animate-opacity">
-  <a href="/" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Home</a>
-  <a href="/gfiles" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Games</a>
-  <a href="/news.html" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">News</a>
-  <a href="https://sites.google.com/stu.hsv-k12.org/leastcommonhangout/weather" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Weather</a>
+<!--Navigation bar-->
+<div id="nav-placeholder">
+
 </div>
+
+<script>
+$(function(){
+  $("#nav-placeholder").load("/nav.html");
+});
+</script>
+<!--end of Navigation bar-->
 </head>
 <body>
      <h2>Welcome to Galaxy Games!</h2>
