--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -102,6 +102,8 @@ $(function(){
 <div class="box">
 <input type="text" id="gsearchbar" onkeyup="var a=document.querySelectorAll('#glist a[href]');for(var i=0;i<a.length;i++)a[i].style.display=a[i].textContent.toUpperCase().indexOf(this.value.toUpperCase())!=-1?'block':'none'" autocomplete="off" spellcheck="false" placeholder="Search" />
 <div id="glist">
+<h2>New Game</h2>
+<a hret="https://www.dropbox.com/s/692wpcev8fgvdqc/Scratcharia.html?dl=1">Scratcharia (v0.0.1)</a>
 <h2>HTML5 Games</h2>
 <a href="https://www.dropbox.com/s/k6hadsohonjhabw/SuperSmashBros.html?dl=1">SuperSmashBros</a>
 <a href="./gfiles/html5/2048/">2048</a>
